[gd_scene load_steps=16 format=4 uid="uid://b0ebftpgtmh23"]

[ext_resource type="Script" uid="uid://cc8e68qq308p3" path="res://scenes/node_2d(start).gd" id="1_7q2hp"]
[ext_resource type="AudioStream" uid="uid://bcihehqici04f" path="res://music/start.ogg" id="2_7jcr1"]
[ext_resource type="Texture2D" uid="uid://cd1baguj42ovq" path="res://graphic/assets/start.png" id="2_8u2n3"]
[ext_resource type="Texture2D" uid="uid://cxrc3dy7gioql" path="res://graphic/assets/smallPlayButton.png" id="4_8oyvr"]
[ext_resource type="Texture2D" uid="uid://b0tpainigyx8f" path="res://graphic/assets/buttons/play-normal.png" id="4_d7os0"]
[ext_resource type="Texture2D" uid="uid://lfll6a1yvmw5" path="res://graphic/assets/buttons/play-clicked.png" id="5_padno"]
[ext_resource type="Texture2D" uid="uid://cyrdo107dex34" path="res://graphic/assets/buttons/close.png" id="5_pmlb3"]
[ext_resource type="Texture2D" uid="uid://bbgje5gaimm3f" path="res://graphic/assets/buttons/close-clicked.png" id="6_k614x"]
[ext_resource type="Texture2D" uid="uid://bvq234qcn817s" path="res://graphic/assets/buttons/play-hovered.png" id="6_sahjs"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8oyvr"]
texture = ExtResource("2_8u2n3")
13:1/0 = 0
14:1/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
9:6/0 = 0
10:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
9:7/0 = 0
11:7/0 = 0
13:8/0 = 0
14:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
13:9/0 = 0
14:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0

[sub_resource type="TileSet" id="TileSet_1bbom"]
sources/0 = SubResource("TileSetAtlasSource_8oyvr")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pmlb3"]
texture = ExtResource("2_8u2n3")
13:1/0 = 0
14:1/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
9:6/0 = 0
10:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
9:7/0 = 0
11:7/0 = 0
13:8/0 = 0
14:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
13:9/0 = 0
14:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0

[sub_resource type="TileSet" id="TileSet_k614x"]
sources/0 = SubResource("TileSetAtlasSource_pmlb3")

[sub_resource type="AtlasTexture" id="AtlasTexture_1bbom"]
atlas = ExtResource("4_8oyvr")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8oyvr"]
atlas = ExtResource("4_8oyvr")
region = Rect2(16, 0, 16, 0)

[node name="Node2D" type="Node2D"]
process_mode = 3
script = ExtResource("1_7q2hp")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_1bbom")
format = 2
layer_0/tile_data = PackedInt32Array(-524280, 196608, 10)

[node name="TileMapLayer" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAABAPz/AAACAAkAAAABAP3/AAACAAoAAAABAP7/AAACAAsAAAACAPz/AAADAAkAAAACAP3/AAADAAoAAAACAP7/AAADAAsAAAADAPz/AAAEAAkAAAADAP3/AAAEAAoAAAADAP7/AAAEAAsAAAAEAPz/AAAFAAkAAAAEAP3/AAAFAAoAAAAEAP7/AAAFAAsAAAAFAPz/AAADAAkAAAAFAP3/AAADAAoAAAAFAP7/AAADAAsAAAAGAPz/AAAEAAkAAAAGAP3/AAAEAAoAAAAGAP7/AAAEAAsAAAAHAPz/AAAFAAkAAAAHAP3/AAAFAAoAAAAHAP7/AAAFAAsAAAAIAPz/AAAGAAkAAAAIAP3/AAAGAAoAAAAIAP7/AAAGAAsAAAAJAPz/AAAHAAkAAAAJAP3/AAAHAAoAAAAJAP7/AAAHAAsAAAAKAPz/AAAIAAkAAAAKAP3/AAAIAAoAAAAKAP7/AAAIAAsAAAALAPz/AAADAAkAAAALAP3/AAADAAoAAAALAP7/AAADAAsAAAAMAPz/AAAEAAkAAAAMAP3/AAAEAAoAAAAMAP7/AAAEAAsAAAANAPz/AAAFAAkAAAANAP3/AAAFAAoAAAANAP7/AAAFAAsAAAAOAPz/AAAGAAkAAAAOAP3/AAAGAAoAAAAOAP7/AAAGAAsAAAAPAPz/AAAHAAkAAAAPAP3/AAAHAAoAAAAPAP7/AAAHAAsAAAAQAPz/AAADAAkAAAAQAP3/AAADAAoAAAAQAP7/AAADAAsAAAARAPz/AAAEAAkAAAARAP3/AAAEAAoAAAARAP7/AAAEAAsAAAABAPn/AAACAAkAAAABAPr/AAACAAoAAAABAPv/AAACAAsAAAACAPn/AAADAAkAAAACAPr/AAADAAoAAAACAPv/AAADAAsAAAADAPn/AAAEAAkAAAADAPr/AAAEAAoAAAADAPv/AAAEAAsAAAAEAPn/AAAFAAkAAAAEAPr/AAAFAAoAAAAEAPv/AAAFAAsAAAAFAPn/AAADAAkAAAAFAPr/AAADAAoAAAAFAPv/AAADAAsAAAAGAPn/AAAEAAkAAAAGAPr/AAAEAAoAAAAGAPv/AAAEAAsAAAAHAPn/AAAFAAkAAAAHAPr/AAAFAAoAAAAHAPv/AAAFAAsAAAAIAPn/AAAHAAsAAAAIAPr/AAAGAAoAAAAIAPv/AAAGAAsAAAAKAPn/AAAHAAsAAAAKAPr/AAAIAAoAAAAKAPv/AAAIAAsAAAALAPn/AAAHAAsAAAALAPr/AAADAAoAAAALAPv/AAADAAsAAAAMAPn/AAAHAAsAAAAMAPr/AAAEAAoAAAAMAPv/AAAEAAsAAAAJAPn/AAAHAAsAAAAJAPr/AAAHAAoAAAAJAPv/AAAHAAsAAAANAPn/AAAFAAkAAAANAPr/AAAFAAoAAAANAPv/AAAFAAsAAAAOAPn/AAAGAAkAAAAOAPr/AAAGAAoAAAAOAPv/AAAGAAsAAAAPAPn/AAAHAAkAAAAPAPr/AAAHAAoAAAAPAPv/AAAHAAsAAAAQAPn/AAAIAAkAAAAQAPr/AAAIAAoAAAAQAPv/AAAIAAsAAAARAPr/AAADAAoAAAARAPv/AAADAAsAAAARAPn/AAADAAkAAAASAPn/AAAEAAkAAAASAPr/AAAEAAoAAAASAPv/AAAEAAsAAAASAPz/AAAFAAkAAAASAP3/AAAFAAoAAAASAP7/AAAFAAsAAAABAPb/AAACAAkAAAABAPf/AAACAAoAAAABAPj/AAACAAsAAAACAPb/AAADAAkAAAACAPf/AAADAAoAAAACAPj/AAADAAsAAAADAPb/AAAEAAkAAAADAPf/AAAEAAoAAAADAPj/AAAEAAsAAAAEAPb/AAAFAAkAAAAEAPf/AAAFAAoAAAAEAPj/AAAFAAsAAAAFAPb/AAADAAkAAAAFAPf/AAADAAoAAAAFAPj/AAADAAsAAAAGAPb/AAAEAAkAAAAGAPf/AAAEAAoAAAAGAPj/AAAEAAsAAAAHAPb/AAAFAAkAAAAHAPf/AAAFAAoAAAAHAPj/AAAFAAsAAAAIAPb/AAAGAAkAAAAIAPf/AAAGAAoAAAAIAPj/AAAGAAsAAAAJAPb/AAAHAAkAAAAJAPf/AAAHAAoAAAAJAPj/AAAHAAsAAAAKAPb/AAAIAAkAAAAKAPf/AAAIAAoAAAAKAPj/AAAIAAsAAAALAPb/AAADAAkAAAALAPf/AAADAAoAAAALAPj/AAADAAsAAAAMAPb/AAAEAAkAAAAMAPf/AAAEAAoAAAAMAPj/AAAEAAsAAAANAPb/AAAFAAkAAAANAPf/AAAFAAoAAAANAPj/AAAFAAsAAAAOAPb/AAAGAAkAAAAOAPf/AAAGAAoAAAAOAPj/AAAGAAsAAAAPAPb/AAAHAAkAAAAPAPf/AAAHAAoAAAAPAPj/AAAHAAsAAAAQAPb/AAAIAAkAAAAQAPf/AAAIAAoAAAAQAPj/AAAIAAsAAAARAPb/AAADAAkAAAARAPf/AAADAAoAAAARAPj/AAADAAsAAAABAPT/AAACAAoAAAABAPX/AAACAAsAAAACAPT/AAADAAoAAAACAPX/AAADAAsAAAADAPT/AAAEAAoAAAADAPX/AAAEAAsAAAAEAPT/AAAFAAoAAAAEAPX/AAAFAAsAAAAFAPT/AAADAAoAAAAFAPX/AAADAAsAAAAGAPT/AAAEAAoAAAAGAPX/AAAEAAsAAAAHAPT/AAAFAAoAAAAHAPX/AAAFAAsAAAAIAPT/AAAGAAoAAAAIAPX/AAAGAAsAAAAJAPT/AAABAAkAAAAJAPX/AAAHAAsAAAAKAPT/AAAIAAoAAAAKAPX/AAAIAAsAAAALAPT/AAADAAoAAAALAPX/AAADAAsAAAAMAPT/AAAEAAoAAAAMAPX/AAAEAAsAAAANAPT/AAAFAAoAAAANAPX/AAAFAAsAAAAOAPT/AAAGAAoAAAAOAPX/AAAGAAsAAAAPAPT/AAAHAAoAAAAPAPX/AAAHAAsAAAAQAPT/AAAIAAoAAAAQAPX/AAAIAAsAAAASAPb/AAAEAAkAAAASAPf/AAAEAAoAAAASAPj/AAAEAAsAAAARAPT/AAADAAoAAAARAPX/AAADAAsAAAASAPX/AAAEAAsAAAASAPT/AAAEAAoAAAATAP7/AAAGAAsAAAATAP3/AAAGAAoAAAATAPv/AAAFAAsAAAATAPz/AAAGAAkAAAATAPr/AAAFAAoAAAATAPn/AAAFAAkAAAATAPj/AAAFAAsAAAATAPf/AAAFAAoAAAATAPb/AAAFAAkAAAATAPX/AAAFAAsAAAATAPT/AAAFAAoAAAA=")
tile_set = SubResource("TileSet_1bbom")

[node name="TileMapLayer2" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAAMAPr/AAAMAAMAAAAMAPv/AAAMAAQAAAAMAPz/AAAMAAUAAAANAPj/AAANAAEAAAANAPn/AAANAAIAAAANAPr/AAANAAMAAAANAPv/AAANAAQAAAANAPz/AAANAAUAAAAOAPj/AAAOAAEAAAAOAPn/AAAOAAIAAAAOAPr/AAAOAAMAAAAOAPv/AAAOAAQAAAAPAPn/AAAPAAIAAAAPAPr/AAAPAAMAAAAKAPz/AAAJAAUAAAAKAP3/AAAJAAYAAAALAPz/AAAKAAUAAAALAP3/AAAKAAYAAAAMAP3/AAAJAAcAAAAOAPz/AAAOAAUAAAAPAPz/AAANAAgAAAAPAP3/AAANAAkAAAAQAPz/AAAOAAgAAAAQAP3/AAAOAAkAAAAJAP3/AAALAAcAAAAEAPr/AAAIAAIAAAAEAPv/AAAIAAMAAAAEAPz/AAAIAAQAAAAFAPr/AAAJAAIAAAAFAPv/AAAJAAMAAAAFAPz/AAAJAAQAAAAGAPr/AAAKAAIAAAAGAPv/AAAKAAMAAAAGAPz/AAAKAAQAAAAMAPn/AAAMAAIAAAA=")
tile_set = SubResource("TileSet_k614x")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_7jcr1")
autoplay = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.154
anchor_bottom = -0.154
offset_left = 42.0
offset_top = 27.16
offset_right = 298.0
offset_bottom = 283.16

[node name="Play" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 4.025
anchor_top = -3.0
anchor_right = 4.025
anchor_bottom = -3.0
offset_left = -32.0
offset_top = -8.99999
offset_right = 32.0
offset_bottom = 7.00001
texture_normal = ExtResource("4_d7os0")
texture_pressed = ExtResource("5_padno")
texture_hover = ExtResource("6_sahjs")

[node name="ContinueGame" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 4.0
anchor_top = -2.55
anchor_right = 4.0
anchor_bottom = -2.55
offset_left = -8.0
offset_top = -7.99999
offset_right = 8.0
offset_bottom = 8.00001
texture_normal = SubResource("AtlasTexture_1bbom")
texture_pressed = SubResource("AtlasTexture_8oyvr")

[node name="Exit" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 152.0
offset_top = -93.0
offset_right = 168.0
offset_bottom = -77.0
texture_normal = ExtResource("5_pmlb3")
texture_pressed = ExtResource("6_k614x")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(167, -104)
zoom = Vector2(4, 4)

[connection signal="pressed" from="Control/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/ContinueGame" to="." method="_on_continue_game_pressed"]
[connection signal="pressed" from="Control/Exit" to="." method="_on_exit_pressed"]
